Add classnames util

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,12 +2,17 @@
   "env": {
     "node": true,
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest/globals": true
   },
   "parserOptions": {
     "sourceType": "module"
   },
   "extends": [
-    "eslint:recommended"
+    "eslint:recommended",
+    "plugin:jest/recommended",
+  ],
+  "plugins": [
+    "jest"
   ]
 }
