--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,11 @@ indent_style = tab
 end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.json]
+indent_style = space
+indent_size = 2
+
+[*.yml]
+indent_style = space
+indent_size = 2
