--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:jest/recommended",
+    "plugin:jest/recommended"
   ],
   "plugins": [
     "jest"
