--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "keywords": [
     "javascript",
-    "es6"
+    "es6",
+    "utils"
   ],
   "scripts": {
     "test": "eslint *.js && jest src/ --coverage --verbose"
@@ -20,15 +21,10 @@
     "url": "https://github.com/Schascha/brabbelback/issues"
   },
   "devDependencies": {
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "eslint": "^5.5.0",
-    "eslint-plugin-jest": "^23.0.2",
-    "jest": "^24.9.0"
-  },
-  "babel": {
-    "plugins": [
-      "transform-es2015-modules-commonjs"
-    ]
+    "eslint": "^7.20.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3"
   }
 }
