--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "utils"
   ],
   "scripts": {
-    "test": "eslint *.js && jest src/ --coverage --verbose"
+    "test": "eslint --ext \".js\" --ignore-path .gitignore . && jest src/ --coverage --verbose"
   },
   "author": "Sascha Künstler <contact.schascha@gmail.com> (http://www.schaschaweb.de)",
   "repository": {
@@ -21,10 +21,11 @@
     "url": "https://github.com/Schascha/brabbelback/issues"
   },
   "devDependencies": {
+    "@schascha/eslint-config": "0.0.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "eslint": "^7.20.0",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint": "^7.27.0",
+    "eslint-plugin-jest": "^24.3.6",
     "jest": "^26.6.3"
   }
 }
