--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "eslint": "^7.27.0",
     "eslint-plugin-jest": "^24.3.6",
     "jest": "^27.0.3"
-  }
+  },
+  "files": [
+    "src",
+    "!src/*.test.js"
+  ]
 }
