--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@schascha/brabbelback",
   "version": "0.0.5",
   "description": "Just some JS utils",
-  "main": "index.js",
   "keywords": [
     "javascript",
     "es6",
@@ -27,6 +26,9 @@
     "eslint": "^7.27.0",
     "eslint-plugin-jest": "^24.3.6",
     "jest": "^27.0.3"
+  },
+  "exports": {
+    "./": "./src/"
   },
   "files": [
     "src",
