--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@schascha/brabbelback",
   "version": "0.0.6",
   "description": "Just some JS utils",
+  "main": "index.js",
   "keywords": [
     "javascript",
     "es6",
@@ -26,9 +27,6 @@
     "eslint": "^7.27.0",
     "eslint-plugin-jest": "^24.3.6",
     "jest": "^27.0.3"
-  },
-  "exports": {
-    "./": "./src/"
   },
   "files": [
     "src",
