Use group updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,18 @@ updates:
   directory: '/'
   schedule:
     interval: 'weekly'
+  groups:
+    dev-dependencies:
+      update-types:
+        - 'minor'
+        - 'patch'
 
 - package-ecosystem: 'github-actions'
   directory: '/'
   schedule:
     interval: 'weekly'
+  groups:
+    dev-dependencies:
+      update-types:
+        - 'minor'
+        - 'patch'
