--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Build 🔧
         run: |
           npm ci
-          npm test
+          npm run lint
+          npm t
 
       - name: Publish 🚀
         if: startsWith(github.ref, 'refs/tags/')
