--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "utils"
   ],
   "scripts": {
-    "test": "eslint --ext \".js\" --ignore-path .gitignore . && jest src/ --coverage --verbose"
+    "lint": "eslint --ext \".js\" --ignore-path .gitignore . && prettier . --check",
+    "format": "eslint --ext \".js\" --ignore-path .gitignore . --fix && prettier . --write",
+    "test": "jest src/ --coverage --verbose"
   },
   "author": "Sascha Künstler <contact.schascha@gmail.com> (https://www.schaschaweb.de)",
   "repository": {
@@ -27,7 +29,8 @@
     "eslint": "^7.30.0",
     "eslint-plugin-jest": "^27.4.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.0.3"
   },
   "files": [
     "src",
