--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,10 @@ updates:
   - package-ecosystem: 'npm'
     directory: '/'
     schedule:
-      interval: 'weekly'
+      interval: 'monthly'
+      time: '05:00'
     groups:
-      dev-dependencies:
+      dependencies:
         update-types:
           - 'minor'
           - 'patch'
@@ -13,4 +14,5 @@ updates:
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
-      interval: 'weekly'
+      interval: 'monthly'
+      time: '05:00'
