--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,16 +11,19 @@ jobs:
           persist-credentials: false
 
       - name: Setup 🔌
-        uses: actions/setup-node@v4.0.1
+        uses: actions/setup-node@v4
         with:
-          node-version: 14.x
+          node-version-file: '.nvmrc'
           registry-url: https://registry.npmjs.org/
 
-      - name: Build 🔧
-        run: |
-          npm ci
-          npm run lint
-          npm t
+      - name: Install dependencies 👨🏻‍💻
+        run: npm ci
+
+      - name: Run linter 👀
+        run: npm run lint
+
+      - name: Run tests 🧪
+        run: npm t
 
       - name: Publish 🚀
         if: startsWith(github.ref, 'refs/tags/')
