--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "utils"
   ],
   "scripts": {
-    "lint": "eslint --ext \".js\" --ignore-path .gitignore . && prettier . --check",
-    "format": "prettier . --write && eslint --ext \".js\" --ignore-path .gitignore . --fix",
+    "lint": "eslint && prettier . --check",
+    "format": "prettier . --write && eslint --fix",
     "test": "jest src/ --coverage --verbose"
   },
   "author": "Sascha Künstler <contact.schascha@gmail.com> (https://www.schaschaweb.de)",
@@ -26,7 +26,7 @@
     "@babel/preset-env": "^7.23.9",
     "@schascha/eslint-config": "^0.3.0",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.50.0",
+    "eslint": "^9.11.1",
     "eslint-plugin-jest": "^28.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -35,5 +35,8 @@
   "files": [
     "src",
     "!src/*.test.js"
-  ]
+  ],
+  "overrides": {
+    "globals": "14.0.0"
+  }
 }
