--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "utils"
   ],
   "scripts": {
+    "start": "tsc -w",
     "lint": "eslint && prettier . --check",
     "format": "prettier . --write && eslint --fix",
     "test": "jest src/ --coverage --verbose"
@@ -25,17 +26,22 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@schascha/eslint-config": "^0.3.0",
+    "@types/jest": "^29.5.13",
     "babel-jest": "^29.7.0",
     "eslint": "^9.11.1",
     "eslint-plugin-jest": "^28.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.2"
   },
   "files": [
+    "dist",
     "src",
     "!src/*.test.js"
   ],
+  "types": "dist",
   "overrides": {
     "globals": "14.0.0"
   }
