--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   },
   "files": [
     "dist",
